@@ -16,6 +16,10 @@ content=album/photo_thumbs.html
 actions=Album::Photos::View
 content=album/photo_image.html
 
+[albums]
+actions=Album::Photos::Albums
+content=album/photo_cycle.html
+
 
 ## Admin commands
 
